# dashboard

./: Cargo.toml  README.md
.github/workflows/: build.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  mail.rs  outlook.rs  web.rs
crates/api/src/outlook/: auth.rs  mod.rs
crates/console/: Cargo.toml
crates/console/src/: input.rs  main.rs  parse.rs  render.rs  setup.rs  state.rs  storage.rs
