[package]
name = "api"
version = "0.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
description = "dashboard api"
homepage = "https://github.com/rellfy/dashboard"
repository = "https://github.com/rellfy/dashboard"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.9" }
async-trait = "0.1.53"
chrono = "0.4.19"