[package]
name = "console"
version = "0.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
description = "dashboard console"
homepage = "https://github.com/rellfy/dashboard"
repository = "https://github.com/rellfy/dashboard"
license = "MIT"
edition = "2018"

[dependencies]
api = { path = "../api" }
tokio = "1.0.1"
