[package]
name = "console"
version = "0.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
description = "dashboard console"
homepage = "https://github.com/rellfy/dashboard"
repository = "https://github.com/rellfy/dashboard"
license = "MIT"
edition = "2018"

[dependencies]
dirs = "4.0.0"
api = { path = "../api" }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0"
html2text = "0.3.1"
termion = "1.5.6"
glib = "0.18.1"
